.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Overtime_Reason_Rate__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Sets overtime reasons or categories and corresponding payment amounts or rates</description>
    <fields>
        <fullName>xcdhcm__Allowed_Overlapping_Overtime_Requests__c</fullName>
        <description>Specified which all overtime categories can be overlapped.</description>
        <label>Allowed Overlapping Overtime Requests</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Amount__c</fullName>
        <description>Amount based on reasons.</description>
        <label>Amount</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Rate__c</fullName>
        <description>Rate corresponding to overtime category.</description>
        <label>Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Reason__c</fullName>
        <description>Configure the overtime categories.</description>
        <label>Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Reduces_working_time__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It should affect the Standard payable hours, and Daily flex balance columns in real time.</description>
        <inlineHelpText>It should affect the Standard payable hours, and Daily flex balance columns in real time.</inlineHelpText>
        <label>Reduces working time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Related_Compensation_API__c</fullName>
        <label>Related Compensation API</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Overtime_Reason_Rate</label>
    <listViews>
        <fullName>View_Rates</fullName>
        <columns>NAME</columns>
        <columns>xcdhcm__Amount__c</columns>
        <columns>xcdhcm__Rate__c</columns>
        <columns>xcdhcm__Reason__c</columns>
        <columns>xcdhcm__Related_Compensation_API__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>View Rates</label>
        <language>en_GB</language>
        <sharedTo>
            <group>HR_Administrator</group>
            <group>OvertimeApprovers</group>
            <group>Payroll_Administrators</group>
        </sharedTo>
    </listViews>
</CustomObject>